# ipum_lab_6

./: .gitignore  LAB_INSTRUCTION_1_DVC.md  LAB_INSTRUCTION_2_MLFLOW.ipynb  README.md  mlflow.db  pyproject.toml
.dvc/: config
data/: ames_data_2006_2008.parquet.dvc
mlflow-artifacts/1/01702a8657f74d22b79027c1c9d45437/artifacts/: estimator.html
mlflow-artifacts/1/229e303810a141e68f583f83cd772ae6/artifacts/: estimator.html
mlflow-artifacts/1/38e3c279ede34e4bb51603d10bef916d/artifacts/: estimator.html
mlflow-artifacts/1/3db6e94fb23a483aa9ba2032006ff69e/artifacts/: estimator.html
mlflow-artifacts/1/3eba5e4c0334436799708557f96faf04/artifacts/: estimator.html
mlflow-artifacts/1/4eddcf1d81af449b96d5cbcda6ea664b/artifacts/: estimator.html  metric_info.json
mlflow-artifacts/1/57ef087f23e34884bc2518619060a049/artifacts/: estimator.html
mlflow-artifacts/1/79b4fc49976947d2adaf1ae99694272d/artifacts/: estimator.html
mlflow-artifacts/1/7a299b4ec0dc4d098a01e4c59820dace/artifacts/: estimator.html
mlflow-artifacts/1/80218fe5dabf4e36a0781851f165b436/artifacts/: estimator.html
mlflow-artifacts/1/b45255cc1e7e4b2ea463bd6ed3fd1c3f/artifacts/: estimator.html
mlflow-artifacts/1/b723b8e7c5514e8bb3ff87d85edc803d/artifacts/: estimator.html
mlflow-artifacts/1/b92c58e79d0844cd83817ad963660a93/artifacts/: estimator.html
mlflow-artifacts/1/df75821df70e47ab90c2b83c0ff559ce/artifacts/: estimator.html
mlflow-artifacts/1/f2e95640f8164ab2be8635b3ac7c98a2/artifacts/: estimator.html
